Handling restaurants and reviews separately, adding 'toggle favorite', background sync

--- a/restaurant.html
+++ b/restaurant.html
@@ -190,6 +190,7 @@
           <button id="toggle-map" onclick="toggleMap()">Show on Map</button>
         </div>
         <h2 id="restaurant-name"></h2>
+        <button id="restaurant-is-favorite" class="favorite" title="Add to favorite"></button>
         <p id="restaurant-address"></p>
         <p id="restaurant-cuisine"></p>
 
@@ -198,8 +199,19 @@
       </section>
 
       <section id="reviews-container">
+        <h3>Reviews</h3>
+        <button id="add-button" title="Add review">Add</button>
         <ul id="reviews-list"></ul>
+        
       </section>
+    </div>
+
+    <!-- modal backgound -->
+    <div id="modal-background">
+    </div>
+    
+     <!-- modal dialog -->
+    <div id="modal">
     </div>
 
   </main>
